Fix watchlist dropdown clipping, remove tab counts on Watchlist page, rename Buzz to Internet Buzz

--- a/src/index.css
+++ b/src/index.css
@@ -1788,6 +1788,7 @@ ul, ol {
   position: relative;
   width: 100%;
   height: 500px;
+  z-index: 10;
 }
 
 .detail-backdrop {
